# Student-Repo-VERSION-1.0

./: CMakeLists.txt
libs/college/: CMakeLists.txt  College.cpp  College.h
libs/course/: CMakeLists.txt  Course.cpp  Course.h
libs/dept/: CMakeLists.txt
libs/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
libs/professor/: CMakeLists.txt  Professor.h  professor.cpp
libs/student/: CMakeLists.txt  Student.cpp  Student.h
src/: main.cpp  test.txt
